--- a/README.html
+++ b/README.html
@@ -617,6 +617,32 @@ mouth, daily, for 2 weeks prior to surgery”</td>
 to further advance the use of ML to parse inclusion and exclusion
 criteria in clinical trials, building on the work originally started by
 Facebook and further extended by our working group partner Roche.</p>
+<table>
+<thead>
+<tr class="header">
+<th>Col1</th>
+<th>Col2</th>
+<th>Col3</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>st</td>
+<td></td>
+<td></td>
+</tr>
+<tr class="even">
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 
